<resources>
    <string name="app_name">Tech Power Hour</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_power_hour">Add Power Hour</string>
    <string name="title_edit_power_hour">Edit Power Hour</string>
    <string name="title_user_power_hour_list">Your Power Hours</string>

    <string name="fab_add_content">Add new Pour Hour</string>

    <!--    Login activity-->
    <string name="login_button">Login or Signup</string>
    <string name="login_email_sent">Please verify your email by clinking the link sent to you</string>

    <!--    Home fragment-->
    <string name="home_company_statistics_title_today">Today</string>
    <string name="home_company_statistics_title_week">This Week</string>
    <string name="home_company_statistics_title_month">This Month</string>

    <string name="home_company_points_statistics_title">BT Point Statistics</string>
    <plurals name="home_company_points_today">
        <item quantity="one">%d point recorded today</item>
        <item quantity="other">%d points recorded today</item>
    </plurals>
    <plurals name="home_company_points_week">
        <item quantity="one">%d point recorded this week</item>
        <item quantity="other">%d points recorded this week</item>
    </plurals>
    <plurals name="home_company_points_month">
        <item quantity="one">%d point recorded this month</item>
        <item quantity="other">%d points recorded this month</item>
    </plurals>

    <string name="home_company_power_hour_statistics_title">BT Power Hour Statistics</string>
    <plurals name="home_company_power_hour_today">
        <item quantity="one">%d Power Hour recorded today</item>
        <item quantity="other">%d Power Hours recorded today</item>
    </plurals>
    <plurals name="home_company_power_hour_week">
        <item quantity="one">%d Power Hour recorded this week</item>
        <item quantity="other">%d Power Hours recorded this week</item>
    </plurals>
    <plurals name="home_company_power_hour_month">
        <item quantity="one">%d Power Hour recorded this month</item>
        <item quantity="other">%d Power Hours recorded this month</item>
    </plurals>

    <!--    AddPowerHour fragment-->
    <string name="add_ph_workout_name_hint">Workout Name</string>
    <string name="add_ph_duration_hint">Duration (in minutes)</string>
    <string name="add_ph_type_hint">Type</string>
    <string name="add_ph_date_hint">Date</string>
    <string name="add_ph_save_fab_desc">Save the new pour hour</string>
    <plurals name="add_ph_on_save_snackbar">
        <item quantity="one">Nice job, you have earned %d point!</item>
        <item quantity="other">Nice job, you have earned %d points!</item>
    </plurals>
    <string name="add_ph_name_missing">The name of the workout is missing</string>
    <string name="add_ph_duration_missing">The duration of the workout is missing</string>
    <string name="add_ph_duration_not_number">The duration of the workout is missing</string>
    <string name="add_ph_type_missing">The type of workout is required</string>
    <string name="add_ph_date_missing">The date of the workout is missing</string>
    <string name="add_ph_date_future">The workout can\'t be in the future</string>

    <!--    Profile fragment-->
    <string name="profile_statistics_title">Statistics</string>
    <string name="profile_controls_title">Controls</string>
    <string name="profile_image_description">Profile picture of the user</string>
    <string name="profile_points_subheading">Points</string>
    <string name="profile_power_hours_subheading">Power Hours</string>
    <string name="profile_controls_power_hour_list_text">View and edit a list of your Power Hours</string>
    <plurals name="profile_statistics_total_points">
        <item quantity="one">You have earned %d point</item>
        <item quantity="other">You have earned %d points</item>
    </plurals>
    <plurals name="profile_statistics_total_power_hours">
        <item quantity="one">You have completed %d Power Hour</item>
        <item quantity="other">You have completed %d Power Hours</item>
    </plurals>
    <string name="profile_account_title">Account</string>
    <string name="profile_account_signout_subheading">Signout</string>
    <string name="profile_account_signout_text">Signout of your account</string>
    <string name="profile_power_hour_list_chevron">End icon for card</string>

    <string name="profile_name_placeholder">John Doe</string>
    <string name="profile_points_placeholder">You have earned 0 points</string>
    <string name="profile_total_power_hours_placeholder">You have completed 0 Power Hours</string>

    <!--    UserPowerHourList fragment-->
    <string name="user_ph_list_edit_icon">Edit icon button for list item</string>
    <string name="user_ph_list_delete_icon">Delete icon button for list item</string>
    <string name="user_ph_list_empty">You have no Power Hours to display!</string>

    <!--    Leaderboard fragment-->
    <string name="leaderboard_action_date_range_title">Date Range</string>
    <string name="leaderboard_action_date_range_action_today">Today</string>
    <string name="leaderboard_action_date_range_action_week">Week</string>
    <string name="leaderboard_action_date_range_action_month">Month</string>

    <string name="leaderboard_title">Leaderboard</string>
    <string name="leaderboard_title_today">Leaderboard Today</string>
    <string name="leaderboard_title_week">Leaderboard This Week</string>
    <string name="leaderboard_title_month">Leaderboard This Month</string>
    <string name="leaderboard_empty_text">No leaderboard available for the current date selection</string>

    <string name="leaderboard_item_img_desc">Profile picture</string>

    <!--    Power Hour display names-->
    <string name="ph_type_walk">Walk</string>
    <string name="ph_type_run">Run</string>
    <string name="ph_type_cycle">Cycle</string>
    <string name="ph_type_weights">Weights</string>
    <string name="ph_type_yoga">Yoga</string>
    <string name="ph_type_pilates">Pilates</string>
    <string name="ph_type_dance">Dance</string>
</resources>