<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_date_range"
        android:icon="@drawable/ic_calendar_event_24dp"
        android:title="@string/leaderboard_action_date_range_title"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_date_range_today"
                android:title="@string/leaderboard_action_date_range_action_today" />
            <item
                android:id="@+id/action_date_range_week"
                android:title="@string/leaderboard_action_date_range_action_week" />
            <item
                android:id="@+id/action_date_range_month"
                android:title="@string/leaderboard_action_date_range_action_month" />
        </menu>

    </item>
</menu>