<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/profile_header_image"
                    android:layout_width="175dp"
                    android:layout_height="134dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_account_circle_24dp"
                    android:contentDescription="@string/profile_image_description" />

                <TextView
                    android:id="@+id/profile_header_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/profile_name_placeholder"
                    android:textSize="24sp"/>

                <View
                    android:id="@+id/profile_header_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/listDivider"/>

            </LinearLayout>

            <!--  Statistics section -->
            <LinearLayout
                android:id="@+id/statistics_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/statistics_layout_heading"
                    style="@style/FragmentListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_statistics_title" />

                <RelativeLayout
                    android:id="@+id/statistics_points_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/points_title"
                        style="@style/FragmentListSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_points_subheading" />

                    <TextView
                        android:id="@+id/points_text"
                        style="@style/FragmentListText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/points_title"
                        android:text="@string/profile_points_placeholder" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/statistics_number_workouts_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/number_workouts_title"
                        style="@style/FragmentListSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_power_hours_subheading"/>

                    <TextView
                        android:id="@+id/number_workouts_text"
                        style="@style/FragmentListText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/number_workouts_title"
                        android:text="@string/profile_total_power_hours_placeholder" />

                </RelativeLayout>
            </LinearLayout>

            <!--  Controls section-->
            <LinearLayout
                android:id="@+id/controls_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/controls_layout_heading"
                    style="@style/FragmentListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_controls_title"/>

                <RelativeLayout
                    android:id="@+id/controls_power_hour_list_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/controls_power_hour_list_title"
                        style="@style/FragmentListSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="16dp"
                        android:layout_toStartOf="@+id/controls_power_hour_end_icon"
                        android:text="@string/profile_power_hours_subheading" />

                    <TextView
                        android:id="@+id/controls_power_hour_list_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/controls_power_hour_list_title"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        android:layout_toStartOf="@+id/controls_power_hour_end_icon"
                        android:maxLines="2"
                        android:paddingHorizontal="16dp"
                        android:text="@string/profile_controls_power_hour_list_text"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <ImageView
                        android:id="@+id/controls_power_hour_end_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/profile_power_hour_list_chevron"
                        android:src="@drawable/ic_chevron_right_24dp" />

                </RelativeLayout>

            </LinearLayout>

            <!--  Account section-->
            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_layout_heading"
                    style="@style/FragmentListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_account_title"/>

                <RelativeLayout
                    android:id="@+id/account_signout_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/account_signout_title"
                        style="@style/FragmentListSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/account_signout_end_icon"
                        android:text="@string/profile_account_signout_subheading"/>

                    <TextView
                        android:id="@+id/account_signout_text"
                        style="@style/FragmentListText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/account_signout_title"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/account_signout_end_icon"
                        android:text="@string/profile_account_signout_text" />

                    <ImageView
                        android:id="@+id/account_signout_end_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/profile_power_hour_list_chevron"
                        android:src="@drawable/ic_logout_variant_24dp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab"
    style="@style/AddPowerHourFAB"
    android:src="@drawable/ic_plus_24dp"
    android:contentDescription="@string/fab_add_content" />
</FrameLayout>