<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.techpowerhour.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.example.techpowerhour.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.techpowerhour.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_add_power_hour"
        android:name="com.example.techpowerhour.ui.add_power_hour.AddPowerHourFragment"
        android:label="AddPowerHour"
        tools:layout="@layout/fragment_add_power_hour" />

    <fragment
        android:id="@+id/navigation_user_power_hour_list"
        android:name="com.example.techpowerhour.ui.user_power_hour_list.UserPowerHourListFragment"
        android:label="UserPowerHourList"
        tools:layout="@layout/fragment_user_power_hour_list" />
</navigation>